--- a/listpra.html
+++ b/listpra.html
@@ -23,18 +23,16 @@
           </form>
         </div>
         <div class="content">
-       <ol>
-           <li>My</li>
-           <li style="background-color: gray;">to do</li>
-           <li>list</li>
-       </ol>
-
-
+          <ol>
+            <li>My</li>
+            <li style="background-color: gray">to do</li>
+            <li>list</li>
+          </ol>
         </div>
         <div class="btnC">
-            <button class="btblue">clear Completed</button>
-            <button class="btred">Empty List</button>
-            <button class="btgreen">Save List</button>
+          <button class="btblue">clear Completed</button>
+          <button class="btred">Empty List</button>
+          <button class="btgreen">Save List</button>
         </div>
       </div>
     </div>
